# SynthflowDashboard

./: .coveragerc  .coveragerc.analytics  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HANDOFF_README.md  Makefile  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  REHYDRATION_PROMPT.md  SECURITY.md  codecov.yml  docker-compose.yml  package.json  pytest.ini  repo_manifest.json  scentiment-dashboard.code-workspace
services/analytics-api/: Dockerfile  README.md  pyproject.toml
services/analytics-api/app/: main.py
services/analytics-api/app/api/: audit.py  cancellations.py  dependencies.py  escalations.py  exports.py  governance.py  health.py  metrics.py  order_status.py  retention.py  subscriptions.py
services/analytics-api/app/core/: config.py  (+1 more)
services/analytics-api/tests/: test_cycle001_foundation_routes.py  test_exports.py  test_health.py  test_metrics.py  test_source_truth_rules.py  test_subscription_analytics_api.py  test_subscription_outcomes_api.py  test_wave7_audit_service.py  test_wave7_rbac_governance.py  test_wave9_api_contracts.py  test_wave9_export_audit_contract.py  test_wave9_no_drift_service_rules.py
services/ingestion-worker/: Dockerfile  README.md  pyproject.toml
services/ingestion-worker/app/: __init__.py  main.py
services/ingestion-worker/tests/: test_connector_safety.py  test_no_drift_normalization.py  test_normalize_events.py  test_pipeline_runner.py  test_retry.py  test_sample_payloads.py  test_wave9_connector_registry.py  test_wave9_normalization_contracts.py  test_wave9_sample_payloads.py
(+515 files in other folders)
